Quiz Grading adjusted to Camino

--- a/index.html
+++ b/index.html
@@ -1839,9 +1839,9 @@ div.tocify {
 <h2>Tableau quizzes (Individual assignment)</h2>
 <p>During the first three weeks, you will answer questions on data visualization with Tableau. The purpose of the quizzes is to assess your understanding of the conceptual and technological fundamentals of dashboards.</p>
 <ul>
-<li>Each quiz will randomly draw <strong>5 questions</strong> from a set of questions.</li>
-<li><strong>You have 10 minutes to answer the questions</strong>, which means that, on average, you have 2 minutes per question.</li>
-<li>Each question will have three answer options. <strong>Each option may earn you 2, 1, or 0 points.</strong></li>
+<li>Each quiz will randomly draw <strong>10 questions</strong> from a set of questions.</li>
+<li><strong>You have 20 minutes to answer the questions</strong>, which means that, on average, you have 2 minutes per question.</li>
+<li>Each question will have three answer options. <strong>The correct answer gives 1 point.</strong></li>
 <li>Quizzes will become progressively harder each week.</li>
 <li>At the end of each Monday session, we will discuss three practice questions.</li>
 </ul>
